--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services: 
   app: 
-    container_name: auth-project-tdd
+    container_name: auth-project-tdd_app
     build: .
     ports: 
       - 3000:3000
